Fix mobile horizontal scroll

--- a/css/intro/style.css
+++ b/css/intro/style.css
@@ -17,7 +17,6 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Ek Mukta', sans-serif;
-	font-weight: 300;
     color: #666;
     background-color: #fff;
 	font-size: 16px;
@@ -26,9 +25,11 @@ body {
 	overflow-x: hidden;
 }
 
-html {
-    width: 100%;
-    height: 100%;
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+	width: 100%;
+	height: 100%;
 }
 
 h1 {
