--- a/css/login/style.css
+++ b/css/login/style.css
@@ -18,35 +18,9 @@ a:hover {
 }
 
 .navbar-header {
-    float: left;
     padding-left: 15px;
 }
 
-.navbar-brand {
-    height: 50px;
-    padding: 0 15px;
-    font-size: inherit;
-    line-height: 50px;
-}
-
-.navbar-nav {
-    float: left;
-    margin: 0;
-}
-
-.navbar-nav > li {
-    float: left;
-}
-
-.navbar-nav > li > a {
-    padding: 0 15px;
-    line-height: 50px;
-}
-
-.navbar-text {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
 
 .center-form {
     width: 315px;
